fix text overflow in todo paragraph

--- a/style.css
+++ b/style.css
@@ -105,7 +105,9 @@ main{
     line-height: 2.5rem;
     border-bottom: 2px solid #76B7CD;
     outline: none;
-    overflow: scroll
+    overflow: hidden;
+    white-space: normal;
+    word-wrap: break-word;
 }
 
 
